Fix title text color not showing on frontend
https://3.basecamp.com/5798509/buckets/37595336/card_tables/cards/9409959234

--- a/plugins/gutenberg/blocks/pricing-table/src/style.scss
+++ b/plugins/gutenberg/blocks/pricing-table/src/style.scss
@@ -79,6 +79,7 @@
 		padding: 0;
 		font-size: 1.5rem;
 		font-weight: 600;
+		color: inherit;
 
 		&::before,
 		&::after {
